(library
 (name luv_cli_test)
 (flags -open Base -linkall -g -w -9)
 (libraries base rely.lib luv-cli.lib)
 (modules
  (:standard \ test_runner)))

(executable
 (name test_runner)
 (libraries base rely.lib luv_cli_test)
 (flags -open Base)
 (modules test_runner))

(rule
 (alias runtest)
 (deps
  (:m test_runner.exe))
 (action
  (run %{m} -q --color=always)))

(include_subdirs unqualified)
