(library
 (name luv_cli_test)
 (flags -linkall -g -w -9)
 (libraries rely.lib luv-cli.lib)
 (modules
  (:standard \ test_runner)))

(executable
 (name test_runner)
 (libraries rely.lib luv_cli_test)
 (modules test_runner))

(rule
 (alias runtest)
 (deps
  (:m test_runner.exe))
 (action
  (run %{m} -q --color=always)))

(include_subdirs unqualified)
